--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.complete_advanced_flutter">
    <application
-        android:label="complete_advanced_flutter"
+        android:label="@strings/app_name"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
