--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   json_annotation: ^4.8.0
   dartz: ^0.10.1
   data_connection_checker: ^0.3.4
+  pretty_dio_logger: ^1.3.1
+  shared_preferences: ^2.1.0
+  device_info: ^2.0.3
+  freezed: ^2.3.2
 
 dev_dependencies:
   flutter_test:
