--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,12 @@ dependencies:
   build_runner: ^2.3.3
   json_annotation: ^4.8.0
   dartz: ^0.10.1
-  data_connection_checker: ^0.3.4
   pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.1.0
   device_info: ^2.0.3
   freezed: ^2.3.2
+  get_it: ^7.2.0
+  lottie: any 
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/json/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
